# lambda-ddb-gateway

./: Cargo.toml  README.md
src/: lib.rs  main.rs
