[package]
name = "lambda-ddb-gateway"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1"
lambda_http = "0.1"
lambda_runtime = "0.2"
rusoto_core = "0.41"
rusoto_dynamodb = "0.41"
